# opencv-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_dependencies.bat
.github/workflows/: ci.yml
dependencies/: .gitignore
include/: logging.h
src/: main.cpp
